Bug 774968 - line-height percentage value not computed accurately. r=dbaron